# smu-calendar

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  calendar.ics  pyproject.toml  requirements.txt
.github/workflows/: regular-update.yml
docs/: calendar.ics
src/: __main__.py  main.py
