[tool.poetry]
name = "smu-calendar"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
ics = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
